fix(pricing): some spacing fixes and new review badges

--- a/sass/pricing.scss
+++ b/sass/pricing.scss
@@ -533,8 +533,6 @@
 	}
 
 	.item{
-		margin-bottom: 15px !important;
-
 		.material-icons.info-icon { 
 			font-size: 14px;
 		}
